@@ -5,14 +5,14 @@ diff -Nru openjdk.orig/jdk/src/solaris/native/sun/nio/ch/FileDispatcherImpl.c op
  #include "nio.h"
  #include "nio_util.h"
  
-+#undef sun_nio_ch_FileDispatcherImpl_NO_LOCK
-+#define sun_nio_ch_FileDispatcherImpl_NO_LOCK -1L
-+#undef sun_nio_ch_FileDispatcherImpl_LOCKED
-+#define sun_nio_ch_FileDispatcherImpl_LOCKED 0L
-+#undef sun_nio_ch_FileDispatcherImpl_RET_EX_LOCK
-+#define sun_nio_ch_FileDispatcherImpl_RET_EX_LOCK 1L
-+#undef sun_nio_ch_FileDispatcherImpl_INTERRUPTED
-+#define sun_nio_ch_FileDispatcherImpl_INTERRUPTED 2L
++#undef sun_nio_ch_FileDispatcher_NO_LOCK
++#define sun_nio_ch_FileDispatcher_NO_LOCK -1L
++#undef sun_nio_ch_FileDispatcher_LOCKED
++#define sun_nio_ch_FileDispatcher_LOCKED 0L
++#undef sun_nio_ch_FileDispatcher_RET_EX_LOCK
++#define sun_nio_ch_FileDispatcher_RET_EX_LOCK 1L
++#undef sun_nio_ch_FileDispatcher_INTERRUPTED
++#define sun_nio_ch_FileDispatcher_INTERRUPTED 2L
  
  static int preCloseFD = -1;     /* File descriptor to which we dup other fd's
                                     before closing them for real */
