@@ -1,5 +1,12 @@
 2009-05-21  Andrew John Hughes  <ahughes@redhat.com>
 
+	* patches/ecj/icedtea-pr39408.patch:
+	Updated to put the file in the state
+	where PR40188 is present so that gcj 4.3
+	builds work.
+
+2009-05-21  Andrew John Hughes  <ahughes@redhat.com>
+
 	* patches/icedtea-stop-nimbus-generation.patch:
 	Renamed.
 	* Makefile.am:
